tests/success/12_logical_not.c
int main() {
	int x = 0;
	int y = !x;		 // 1
	int z = !y;		 // 0
	return y + z;	 // 1
}
