tests/fail/04_conflicting_types.c
int foo(int x);
int foo(int x, int y);	// ERROR: conflicting declarations

int main() {
	return 0;
}
